# login_system

./: .gitignore  README  config.yaml  docker-compose.yml  script.sh  ssl.conf
backend/: Dockerfile  README.md  pyproject.toml
backend/login_backend/: config.example  config.py  main.py
backend/login_backend/lib/: DataBase.py
backend/login_backend/test/: DatabaseTest.py  HashTest.py
backend/system/: main.py
backend/system/lib/: Enctyption.py  Hash.py  hash.py
backend/system/test/: HashTest.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: LoginPage.vue
frontend/src/router/: index.js
frontend/src/utils/: login.js  userDB.js
frontend/src/views/: Login.vue  Register.vue
mysql/: init.sql
nginx/: .gitignore  nginx.conf  ssl.example
